--- a/public/about.html
+++ b/public/about.html
@@ -12,7 +12,7 @@
   <header>
     <div class="container nav">
       <a href="index.html#home" class="brand-lockup">
-        <div class="logo-mark" aria-hidden="true"></div>
+        <img src="LogoProject.png" alt="Downtown Donuts logo" class="logo-image" />
         <div class="brand-text">
           <span class="brand-name">Downtown Donuts</span>
           <span class="brand-tagline">Since 1992 • Downtown</span>
@@ -40,7 +40,7 @@
           <div>
             <h1 class="section-title">Our Story</h1>
             <p class="section-subtitle">
-              A small, family-owned donut shop that quietly became the unofficial “meet you there?” spot
+              A small, family-owned donut shop that quietly became the unofficial spot
               for downtown workers and college students.
             </p>
           </div>
@@ -49,19 +49,16 @@
         <div class="about-grid">
           <div class="about-body">
             <p>
-              Downtown Donuts has been rolling dough and brewing coffee since 1992. Long before
-              food delivery apps and smartphones, this shop was the place you stopped before work,
-              after school, or on your way to a game.
+              Downtown Donuts has been rolling dough and brewing coffee since 1992.
             </p>
             <p>
-              These days, you’ll still see regulars at the counter — plus students with laptops,
+              These days, you’ll still see regulars at the counter, students with laptops,
               friends splitting a dozen, and parents bribing kids with sprinkle rings. The goal
               hasn’t changed: warm donuts, kind faces, and a place that feels like part of your routine.
             </p>
             <p>
               This page is filled with placeholder text for the assignment, but the layout is built
-              to give their real story room to breathe: a modern, minimal design that still feels
-              cozy and a little nostalgic.
+              to give their requested design.
             </p>
           </div>
 
@@ -72,7 +69,7 @@
             </div>
             <div>
               <div class="about-fact-label">From-scratch dough</div>
-              <p>Handmade dough, small batches, and a lot of “just one more taste test.”</p>
+              <p>Handmade dough, small batches, best tastes!</p>
             </div>
             <div>
               <div class="about-fact-label">Downtown & campus</div>
@@ -80,7 +77,7 @@
             </div>
             <div>
               <div class="about-fact-label">Built for community</div>
-              <p>Clubs, offices, and friend groups all welcome — donuts are a group project we support.</p>
+              <p>Everyone is welcome!</p>
             </div>
           </aside>
         </div>
