--- a/public/comments.html
+++ b/public/comments.html
@@ -12,7 +12,7 @@
   <header>
     <div class="container nav">
       <a href="index.html#home" class="brand-lockup">
-        <div class="logo-mark" aria-hidden="true"></div>
+        <img src="LogoProject.png" alt="Downtown Donuts logo" class="logo-image" />
         <div class="brand-text">
           <span class="brand-name">Downtown Donuts</span>
           <span class="brand-tagline">Since 1992 • Downtown</span>
@@ -40,8 +40,7 @@
           <div>
             <h1 class="section-title">Community Wall</h1>
             <p class="section-subtitle">
-              Think of this as the digital version of writing on a coffee shop chalkboard:
-              favorite donuts, cozy memories, and “you have to try this” recommendations.
+              Coffee shop chalkboard
             </p>
           </div>
         </div>
@@ -84,7 +83,7 @@
                   <span class="comment-meta">“Study break regular”</span>
                 </div>
                 <p>
-                  I swear the Buster the Bronco Crunch has carried me through more midterms than my planner ever did.
+                  Great donuts! 10/10 recommend.
                 </p>
               </article>
               <article class="comment-item">
@@ -93,8 +92,7 @@
                   <span class="comment-meta">“Weekend donut run”</span>
                 </div>
                 <p>
-                  Love grabbing a box before heading to the river. Cozy shop, good coffee, and everyone behind the counter
-                  is actually nice even at opening time.
+                  Love grabbing a box before heading to the river. Cozy shop and good coffee!
                 </p>
               </article>
             </div>
