--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <header>
     <div class="container nav">
       <a href="index.html#home" class="brand-lockup">
-        <div class="logo-mark" aria-hidden="true"></div>
+        <img src="LogoProject.png" alt="Downtown Donuts logo" class="logo-image" />
         <div class="brand-text">
           <span class="brand-name">Downtown Donuts</span>
           <span class="brand-tagline">Since 1992 • Downtown</span>
@@ -40,7 +40,7 @@
         <h1 class="hero-title">Handmade donuts & small-batch coffee for the downtown and campus crowd.</h1>
         <p class="hero-subtitle">
           Sneak in before lecture, debrief after exams, or grab a box for your study group. Cozy vibes,
-          warm donuts, and caffeine that actually shows up for you.
+          warm donuts, and caffeine!
         </p>
 
         <div class="hero-cta-row">
@@ -56,7 +56,7 @@
         </div>
 
         <p class="hero-note">
-          Open daily · 6:30am – 2:00pm · 123 Main Street, Downtown · 7 min from campus (if you’re power walking)
+          Open daily · 6:30am – 2:00pm · 123 Main Street, Downtown · 7 min from campus
         </p>
       </div>
 
@@ -64,7 +64,7 @@
         <div class="hero-card-header">
           <div>
             <h2 class="hero-card-title">Today’s Study-Break Lineup</h2>
-            <p class="hero-card-subtitle">Perfect with lecture notes or a true crime podcast.</p>
+            <p class="hero-card-subtitle">Perfect with lecture notes</p>
           </div>
           <span class="hero-card-pill">Baked fresh daily</span>
         </div>
@@ -105,7 +105,7 @@
           <h2 class="section-title">Your downtown donut spot</h2>
           <p class="section-subtitle">
             Whether you’re cramming for a midterm, catching up with friends, or celebrating
-            surviving group projects, we’re the quick walk away meet-up spot.
+            finals; we have all the treats!
           </p>
         </div>
       </div>
