--- a/public/menu.html
+++ b/public/menu.html
@@ -12,7 +12,7 @@
   <header>
     <div class="container nav">
       <a href="index.html#home" class="brand-lockup">
-        <div class="logo-mark" aria-hidden="true"></div>
+        <img src="LogoProject.png" alt="Downtown Donuts logo" class="logo-image" />
         <div class="brand-text">
           <span class="brand-name">Downtown Donuts</span>
           <span class="brand-tagline">Since 1992 • Downtown</span>
@@ -40,8 +40,7 @@
           <div>
             <h1 class="section-title">Our Menu</h1>
             <p class="section-subtitle">
-              This is a prototype layout — think of it as a placeholder for their real digital menu,
-              built to feel cozy, minimal, and totally scrollable on your phone between classes.
+              This is a prototype layout a placeholder for their real digital menu.
             </p>
           </div>
           <button class="btn btn-primary" type="button">Download Full Menu (PDF)</button>
@@ -54,8 +53,7 @@
               <span class="menu-card-tag">Always in the case</span>
             </div>
             <p class="menu-card-body">
-              Glazed, chocolate, and sugar coated — the stuff you grab when you’re running late
-              to an 8am but still want something warm in your hand.
+              Glazed, chocolate, and sugar coated.
             </p>
             <div class="price-row">
               <span>Per donut</span>
@@ -73,8 +71,7 @@
               <span class="menu-card-tag">Campus favorite</span>
             </div>
             <p class="menu-card-body">
-              A caramel-glazed donut with a salted crunch topping and school-color sprinkles.
-              The unofficial “we survived that exam” donut.
+              A caramel-glazed donut with a salted crunch topping and blue and orange sprinkles.
             </p>
             <div class="price-row">
               <span>Per donut</span>
@@ -92,8 +89,7 @@
               <span class="menu-card-tag">Caffeine buddies</span>
             </div>
             <p class="menu-card-body">
-              Hot drip, cold brew, and cozy lattes to get you through lectures, labs,
-              and those “just one more page” nights.
+              Hot drip, cold brew, and cozy lattes to get you through lectures.
             </p>
             <div class="price-row">
               <span>Drip coffee</span>
@@ -111,8 +107,7 @@
               <span class="menu-card-tag">Clubs & events</span>
             </div>
             <p class="menu-card-body">
-              Need donuts for a club meeting, dorm hangout, or morning conference?
-              Mix-and-match dozens so everyone gets something they like.
+              Need donuts for a dorm hangout?
             </p>
             <div class="price-row">
               <span>Office dozens</span>
